[gd_scene load_steps=20 format=3 uid="uid://0bq3mr4k2yu0"]

[ext_resource type="Script" path="res://scripts/NPC/NPC.gd" id="1_k40a6"]
[ext_resource type="Texture2D" uid="uid://t88m5j0qcxcy" path="res://assets/legacy/slime.png" id="2_5n3qe"]
[ext_resource type="Script" path="res://scripts/StateMachine/NPCStateMachine.gd" id="2_gsyok"]
[ext_resource type="Script" path="res://scripts/NPC/NPCIdle.gd" id="4_pyyip"]
[ext_resource type="Script" path="res://scripts/NPC/NPCWalking.gd" id="5_pst2m"]
[ext_resource type="Script" path="res://scripts/NPC/NPCInteract.gd" id="6_od0pn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8g4ya"]
atlas = ExtResource("2_5n3qe")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tc3of"]
atlas = ExtResource("2_5n3qe")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kc6ld"]
atlas = ExtResource("2_5n3qe")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_62tsx"]
atlas = ExtResource("2_5n3qe")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p16ll"]
atlas = ExtResource("2_5n3qe")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_526r2"]
atlas = ExtResource("2_5n3qe")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hi5y"]
atlas = ExtResource("2_5n3qe")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lp7ys"]
atlas = ExtResource("2_5n3qe")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7u45h"]
atlas = ExtResource("2_5n3qe")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3op8"]
atlas = ExtResource("2_5n3qe")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ligmd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8g4ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tc3of")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kc6ld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62tsx")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p16ll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_526r2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hi5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lp7ys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7u45h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3op8")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5oev7"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3kolx"]
radius = 23.0

[node name="NPC" type="CharacterBody2D" node_paths=PackedStringArray("fsm")]
script = ExtResource("1_k40a6")
fsm = NodePath("StateMachine")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
self_modulate = Color(1, 0, 0, 1)
sprite_frames = SubResource("SpriteFrames_ligmd")
animation = &"Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_5oev7")

[node name="ChatArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChatArea"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_3kolx")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("2_gsyok")
current_state = NodePath("Walking")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_pyyip")

[node name="Walking" type="Node" parent="StateMachine"]
script = ExtResource("5_pst2m")

[node name="Interacting" type="Node" parent="StateMachine"]
script = ExtResource("6_od0pn")

[connection signal="body_entered" from="ChatArea" to="." method="_on_chat_area_body_entered"]
[connection signal="body_exited" from="ChatArea" to="." method="_on_chat_area_body_exited"]
